# koraprotocol

./: .gitignore  ARCHITECTURE.md  INDEX.md  README.md  index.html  next.config.ts  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tsconfig.json  vite-env.d.ts
contract/: Cargo.toml  README.md
contract/src/: error.rs  lib.rs  msg.rs  state.rs
src/: App.tsx  index.css
src/api/: injectiveClient.ts
src/app/: globals.css  layout.tsx
src/app/ai/: page.tsx
src/app/api/chat/: route.ts
src/app/api/markets/: route.ts
src/app/api/orderbook/: route.ts
src/app/api/portfolio/: route.ts
src/app/api/trades/: route.ts
src/app/api/yields/: route.ts
src/app/dashboard/: page.tsx
src/app/portfolio/: page.tsx
src/components/: AIAdvisory.tsx  AIChat.tsx  Loader.tsx  MarketSelector.tsx  OrderbookDepth.tsx  OrderbookTable.tsx  PriceChart.tsx  PriceWidget.tsx  StrategyVault.tsx  TopMovers.tsx  TradePanel.tsx  TradesFeed.tsx  TradesList.tsx  WalletConnect.tsx  YieldsPanel.tsx
src/config/: pythPriceIds.ts
src/hooks/: useAIAnalysis.ts  useMarkets.ts  useOrderbook.ts  useOrderbookStream.ts  usePortfolioStream.ts  useTrades.ts  useTradesStream.ts  useWallet.ts
src/lib/: injective.ts  wallet.ts
src/pages/: Dashboard.tsx  LandingPage.tsx
src/services/: geminiService.ts  tradingService.ts
src/store/: wallet.ts
src/styles/: tokens.css
src/types/: index.ts
src/utils/: format.ts
