[package]
name = "kora-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = "1.2"
cosmwasm-schema = "1.2"
cosmwasm-storage = "1.2"
cw2 = "2.0"
cw-storage-plus = "1.2"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
base64ct = "=1.8.2"

[lib]
crate-type = ["cdylib", "rlib"]
